--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,10 @@
 .env
 docker-compose.yml
-traefik/traefik.toml
+traefik/traefik.yaml
+traefik/dnschallenge/*
+traefik/.env
 webhook/hooks/hooks.json
 webhook/scripts/*.sh
 mongo/mongod.conf
+secrets/*.secret
+./**/*.secret
