--- a/.env.example
+++ b/.env.example
@@ -28,64 +28,24 @@ COMPOSE_PROJECT_NAME=local
 # If you are using Docker Sync. For `osx` use 'native_osx', for `windows` use 'unison', for `linux` docker-sync is not required
 DOCKER_SYNC_STRATEGY=native_osx
 
-### TRAEFIK BACKENDS, URLS & PORTS #################################################
-TB_APP=frontend
-APP_HOST_URL=app.local.test
+### APPLICATION PORTS #################################################
 APP_CONTAINER_PORT=3000
-
-TB_GRAPHQL=graphql-api
-GRAPHQL_API_HOST_URL=graphql.local.test
 GRAPHQL_CONTAINER_PORT=4000
-
-TB_PRISMA=prisma
-PRISMA_HOST_URL=prisma.local.test
 PRISMA_CONTAINER_PORT=4466
-
-TB_STRAPI=strapi
-STRAPI_HOST_URL=strapi.local.test
 STRAPI_CONTAINER_PORT=1337
-
-TB_MONGO_EXPRESS='mongo-express'
-MONGO_EXPRESS_HOST_URL=mongo.local.test
 MONGO_EXPRESS_CONTAINER_PORT=8081
-
-TB_JENKINS=jenkins
-JENKINS_HOST_URL=jenkins.local.test
 JENKINS_CONTAINER_PORT=8080
-
-TB_WEBHOOK=webhook
-WEBHOOK_HOST_URL=webhook.local.test
 WEBHOOK_CONTAINER_PORT=9000
-
-TB_ADMINER=adminer
-ADMINER_HOST_URL=adminer.local.test
 ADMINER_CONTAINER_PORT=8080
-
-TB_REDIS_WEBUI=redis
-REDIS_WEBUI_HOST_URL=redis.local.test
 REDIS_WEBUI_CONTAINER_PORT=80
-
-TB_TRAEFIK=monitor
-TRAEFIK_HOST_URL=monitor.local.test
-
-TB_AMBASSADOR=ambassador
-AMBASSADOR_HOST_URL=apigateway.local.test
-AMBASSADOR_HOST_URL_PREFIX='/api'
 AMBASSADOR_CONTAINER_PORT=8080
-
-TB_ELASTICSEARCH=elastic
-ELASTICSEARCH_HOST_URL=es.local.test
 ELASTICSEARCH_HOST_HTTP_PORT=9200
-
-TB_FUSIONAUTH=fusionauth
-FUSIONAUTH_HOST_URL=fusionauth.local.test
 FUSIONAUTH_CONTAINER_PORT=9011
 
 ### ADONIS API CONTAINERS #################################################
 MS_DIR=microservices
 
 MS_ONE=authors
-MS_ONE_HOST_URL=authors.local.test
 MS_ONE_PORT=3333
 
 ### API #################################################
@@ -188,11 +148,9 @@ ADMINER_DESIGN=galkaev
 
 ### TRAEFIK #################################################
 
-TRAEFIK_DO_AUTH_TOKEN=
+TRAEFIK_VERSION=2.1.6
 TRAEFIK_HOST_HTTP_PORT=80
 TRAEFIK_HOST_HTTPS_PORT=443
-TRAEFIK_NAMECHEAP_API_USER=
-TRAEFIK_NAMECHEAP_API_KEY=
 
 ### REDIS #################################################
 
