--- a/traefik/traefik.development.yml
+++ b/traefik/traefik.development.yml
@@ -25,7 +25,7 @@ providers:
     exposedByDefault: false
   file:
     # Enable the file provider to define routers / middlewares / services in file
-    directory: /config
+    directory: /etc/traefik/dynamic
     watch: true
 
 accessLog:
