--- a/traefik/.env.example
+++ b/traefik/.env.example
@@ -3,5 +3,5 @@
 # DO_AUTH_TOKEN=
 # NAMECHEAP_API_USER=
 # NAMECHEAP_API_KEY=
-NAMECHEAP_API_USER_FILE=/run/secrets/namecheap_user
-NAMECHEAP_API_KEY_FILE=/run/secrets/namecheap/api_key
+# NAMECHEAP_API_USER_FILE=/run/secrets/namecheap_user
+# NAMECHEAP_API_KEY_FILE=/run/secrets/namecheap/api_key
