--- a/traefik/example-dynamic/dashboard.yml
+++ b/traefik/example-dynamic/dashboard.yml
@@ -2,7 +2,7 @@
 http:
   routers:
     api:
-      rule: "Host(`tk.local.test`) && (PathPrefix(`/api`) || PathPrefix(`/dashboard`) || PathPrefix(`/debug`))"
+      rule: "Host(`tk.local.test`)"
       entrypoints:
         - websecure
       service: api@internal
@@ -10,17 +10,12 @@ http:
         - auth
       tls:
         certResolver: letsEncryptDns
-        domains:
-          - main: "local.test"
-            sans: "*.local.test"
 
   middlewares:
     auth:
       basicAuth:
         users:
-          - "test:$apr1$H6uskkkW$IgXLP6ewTrSuBkTrqE8wj/"
-          - "test2:$apr1$d9hr9HBB$4HxwgUir3HP4EsggP/Q"
+          - "user:htppasswd"
         usersFile: "/auth/get/users"
         realm: "MyRealm"
         headerField: "X-WebAuth-User"
-        
