--- a/traefik/traefik.development.yml
+++ b/traefik/traefik.development.yml
@@ -4,8 +4,6 @@ global:
 entryPoints:
   web:
     address: ":80"
-  websecure:
-    address: ":443"
   mysql:
     address: ":3306"
   metrics:
@@ -20,18 +18,18 @@ providers:
   providersThrottleDuration: 10s
   docker:
     endpoint: "tcp://socket-proxy:2375"
-    defaultRule: 'Host(`{{ index .Labels "com.get.host.url"}}`) || Host(`{{ normalize .Name }}.local.test`)'
     network: local_frontend
     exposedByDefault: false
+    watch: true
   file:
     # Enable the file provider to define routers / middlewares / services in file
     directory: /etc/traefik/dynamic
     watch: true
 
 accessLog:
-  filePath: /logs/access_log.log
+  # filePath: /logs/access_log.log
   bufferingSize: 1000
 
 log:
   level: DEBUG
-  filePath: /logs/traefik.log
+  # filePath: /logs/traefik.log
