Configures traefik for multiple containers

--- a/docker-compose.example.yml
+++ b/docker-compose.example.yml
@@ -92,6 +92,15 @@ services:
       - frontend
     depends_on:
       - prisma
+    labels:
+      - traefik.enable=true
+      - traefik.http.routers.graph.rule=Host(`graph.local.test`)
+      - traefik.http.routers.graph.entrypoints=web
+      - traefik.http.services.graph.loadbalancer.server.port=${GRAPHQL_CONTAINER_PORT}
+      # - traefik.http.routers.graph.middlewares=auth
+      # - traefik.http.middlewares.auth.basicauth.users=test:xxx
+      # - traefik.http.routers.graph.tls.certresolver=letsEncryptDns
+      # - traefik.http.routers.graph.entrypoints=websecure
 
   ## PRISMA ################################################
   prisma:
@@ -130,6 +139,15 @@ services:
     networks:
       - frontend
       - backend
+    labels:
+      - traefik.enable=true
+      - traefik.http.routers.prisma.rule=Host(`prisma.local.test`)
+      - traefik.http.routers.prisma.entrypoints=web
+      - traefik.http.services.prisma.loadbalancer.server.port=${PRISMA_CONTAINER_PORT}
+      # - traefik.http.routers.prisma.middlewares=auth
+      # - traefik.http.middlewares.auth.basicauth.users=test:xxx
+      # - traefik.http.routers.prisma.tls.certresolver=letsEncryptDns
+      # - traefik.http.routers.prisma.entrypoints=websecure
 
   ## STRAPI ################################################
   strapi:
@@ -154,6 +172,15 @@ services:
     volumes:
       - ${APP_CODE_PATH_CONTAINER}/api/node_modules
       - ./strapi:${APP_CODE_PATH_CONTAINER}/api
+    labels:
+      - traefik.enable=true
+      - traefik.http.routers.strapi.rule=Host(`strapi.local.test`)
+      - traefik.http.routers.strapi.entrypoints=web
+      - traefik.http.services.strapi.loadbalancer.server.port=${STRAPI_CONTAINER_PORT}
+      # - traefik.http.routers.strapi.middlewares=auth
+      # - traefik.http.middlewares.auth.basicauth.users=test:xxx
+      # - traefik.http.routers.strapi.tls.certresolver=letsEncryptDns
+      # - traefik.http.routers.strapi.entrypoints=websecure
 
   ### MySQL ################################################
   mysql:
@@ -229,21 +256,30 @@ services:
     networks:
       - backend
 
-    ### MongoWebUI ################################################
-    mongo-webui:
-      image: mongoclient/mongoclient
-      environment:
-        - ROOT_URL=${MONGO_WEBUI_ROOT_URL}
-        - MONGO_URL=${MONGO_WEBUI_MONGO_URL}
-        - INSTALL_MONGO=${MONGO_WEBUI_INSTALL_MONGO}
-      volumes:
-        - ${DATA_PATH_HOST}/mongo-webui:/data/db
-      ports:
-        - "${MONGO_WEBUI_PORT}:3000"
-      networks:
-        - backend
-      depends_on:
-        - mongo
+  ### MongoWebUI ################################################
+  mongo-webui:
+    image: mongoclient/mongoclient
+    environment:
+      - ROOT_URL=${MONGO_WEBUI_ROOT_URL}
+      - MONGO_URL=${MONGO_WEBUI_MONGO_URL}
+      - INSTALL_MONGO=${MONGO_WEBUI_INSTALL_MONGO}
+    volumes:
+      - ${DATA_PATH_HOST}/mongo-webui:/data/db
+    # ports:
+    # - "${MONGO_WEBUI_PORT}:3000"
+    networks:
+      - backend
+    depends_on:
+      - mongo
+    labels:
+      - traefik.enable=true
+      - traefik.http.routers.mongo.rule=Host(`mongo.local.test`)
+      - traefik.http.routers.mongo.entrypoints=web
+      - traefik.http.services.mongo.loadbalancer.server.port=${MONGO_WEBUI_PORT}
+      # - traefik.http.routers.mongo.middlewares=auth
+      # - traefik.http.middlewares.auth.basicauth.users=test:xxx
+      # - traefik.http.routers.mongo.tls.certresolver=letsEncryptDns
+      # - traefik.http.routers.mongo.entrypoints=websecure
 
   ### Mongo Express ##############################################
   mongo-express:
@@ -263,6 +299,15 @@ services:
       ME_CONFIG_MONGODB_AUTH_DATABASE: ${API_DATABASE_AUTHENTICATION_DATABASE}
       ME_CONFIG_MONGODB_AUTH_USERNAME: ${API_DATABASE_USER}
       ME_CONFIG_MONGODB_AUTH_PASSWORD: ${API_DATABASE_PASSWORD}
+    labels:
+      - traefik.enable=true
+      - traefik.http.routers.mongoex.rule=Host(`mongoex.local.test`)
+      - traefik.http.routers.mongoex.entrypoints=web
+      - traefik.http.services.mongoex.loadbalancer.server.port=${MONGO_EXPRESS_CONTAINER_PORT}
+      # - traefik.http.routers.mongoex.middlewares=auth
+      # - traefik.http.middlewares.auth.basicauth.users=test:xxx
+      # - traefik.http.routers.mongoex.tls.certresolver=letsEncryptDns
+      # - traefik.http.routers.mongoex.entrypoints=websecure
 
   ### Jenkins ###################################################
   jenkins:
@@ -279,6 +324,15 @@ services:
     networks:
       - frontend
       - backend
+    labels:
+      - traefik.enable=true
+      - traefik.http.routers.jenkins.rule=Host(`jenkins.local.test`)
+      - traefik.http.routers.jenkins.entrypoints=web
+      - traefik.http.services.jenkins.loadbalancer.server.port=${JENKINS_CONTAINER_PORT}
+      # - traefik.http.routers.jenkins.middlewares=auth
+      # - traefik.http.middlewares.auth.basicauth.users=test:xxx
+      # - traefik.http.routers.jenkins.tls.certresolver=letsEncryptDns
+      # - traefik.http.routers.jenkins.entrypoints=websecure
 
   ### Webhook ###################################################
   webhook:
@@ -289,6 +343,15 @@ services:
       - ${APP_CODE_PATH_HOST}:/opt/deploy
     networks:
       - frontend
+    labels:
+      - traefik.enable=true
+      - traefik.http.routers.webhook.rule=Host(`webhook.local.test`)
+      - traefik.http.routers.webhook.entrypoints=web
+      - traefik.http.services.webhook.loadbalancer.server.port=${WEBHOOK_CONTAINER_PORT}
+      # - traefik.http.routers.webhook.middlewares=auth
+      # - traefik.http.middlewares.auth.basicauth.users=test:xxx
+      # - traefik.http.routers.webhook.tls.certresolver=letsEncryptDns
+      # - traefik.http.routers.webhook.entrypoints=websecure
 
   ### Adminer ################################################
   adminer:
@@ -301,6 +364,15 @@ services:
     networks:
       - frontend
       - backend
+    labels:
+      - traefik.enable=true
+      - traefik.http.routers.adminer.rule=Host(`adminer.local.test`)
+      - traefik.http.routers.adminer.entrypoints=web
+      - traefik.http.services.adminer.loadbalancer.server.port=${ADMINER_CONTAINER_PORT}
+      # - traefik.http.routers.adminer.middlewares=auth
+      # - traefik.http.middlewares.auth.basicauth.users=test:xxx
+      # - traefik.http.routers.adminer.tls.certresolver=letsEncryptDns
+      # - traefik.http.routers.adminer.entrypoints=websecure
 
   ### Redis ################################################
   redis:
@@ -334,6 +406,15 @@ services:
       - backend
     depends_on:
       - redis
+    labels:
+      - traefik.enable=true
+      - traefik.http.routers.redis.rule=Host(`redis.local.test`)
+      - traefik.http.routers.redis.entrypoints=web
+      - traefik.http.services.redis.loadbalancer.server.port=${REDIS_WEBUI_CONTAINER_PORT}
+      # - traefik.http.routers.redis.middlewares=auth
+      # - traefik.http.middlewares.auth.basicauth.users=test:xxx
+      # - traefik.http.routers.redis.tls.certresolver=letsEncryptDns
+      # - traefik.http.routers.redis.entrypoints=websecure
 
   ### TRAEFIK #########################################
   socket-proxy:
@@ -395,6 +476,15 @@ services:
     networks:
       - frontend
       - backend
+    labels:
+      - traefik.enable=true
+      - traefik.http.routers.elastic.rule=Host(`elastic.local.test`)
+      - traefik.http.routers.elastic.entrypoints=web
+      - traefik.http.services.elastic.loadbalancer.server.port=${ELASTICSEARCH_HOST_HTTP_PORT}
+      # - traefik.http.routers.elastic.middlewares=auth
+      # - traefik.http.middlewares.auth.basicauth.users=test:xxx
+      # - traefik.http.routers.elastic.tls.certresolver=letsEncryptDns
+      # - traefik.http.routers.elastic.entrypoints=websecure
 
   ### FUSIONAUTH ########################################
   fusionauth:
@@ -419,3 +509,12 @@ services:
       - backend
     # ports:
     # - 9011:${FUSIONAUTH_CONTAINER_PORT}
+    labels:
+      - traefik.enable=true
+      - traefik.http.routers.fusionauth.rule=Host(`auth.local.test`)
+      - traefik.http.routers.fusionauth.entrypoints=web
+      - traefik.http.services.fusionauth.loadbalancer.server.port=${FUSIONAUTH_CONTAINER_PORT}
+      # - traefik.http.routers.fusionauth.middlewares=auth
+      # - traefik.http.middlewares.auth.basicauth.users=test:xxx
+      # - traefik.http.routers.fusionauth.tls.certresolver=letsEncryptDns
+      # - traefik.http.routers.fusionauth.entrypoints=websecure
