--- a/.env.example
+++ b/.env.example
@@ -132,6 +132,12 @@ MONGO_INITDB_ROOT_USERNAME=${API_DATABASE_USERNAME}
 MONGO_INITDB_ROOT_PASSWORD=${API_DATABASE_PASSWORD}
 MONGO_INITDB_DATABASE=${API_DATABASE_NAME}
 
+### MONGO-WEBUI ###############################################
+MONGO_WEBUI_PORT=3000
+MONGO_WEBUI_ROOT_URL=http://localhost
+MONGO_WEBUI_MONGO_URL=mongodb://mongo:27017/
+MONGO_WEBUI_INSTALL_MONGO=false
+
 ### MONGO-EXPRESS ###############################################
 
 ME_CONFIG_MONGODB_SERVER=mongo
