--- a/.env.example
+++ b/.env.example
@@ -179,3 +179,8 @@ ELASTICSEARCH_HOST_TRANSPORT_PORT=9300
 
 ### FUSIONAUTH #########################################
 FUSIONAUTH_MEMORY=512M
+FUSIONAUTH_HTTP_PORT=80
+FUSIONAUTH_HTTPS_PORT=443
+FUSIONAUTH_RUNTIME_MODE=development
+FUSIONAUTH_URL=http://fusionauth:9011
+FUSIONAUTH_SEARCH_SERVERS=http://elasticsearch:9200
