--- a/.env.example
+++ b/.env.example
@@ -37,6 +37,7 @@ MONGO_EXPRESS_CONTAINER_PORT=8081
 JENKINS_CONTAINER_PORT=8080
 WEBHOOK_CONTAINER_PORT=9000
 ADMINER_CONTAINER_PORT=8080
+PHPMYADMIN_CONTAINER_PORT=80
 REDIS_WEBUI_CONTAINER_PORT=80
 ELASTICSEARCH_HOST_HTTP_PORT=9200
 FUSIONAUTH_CONTAINER_PORT=9011
